fixes for overflowing nav items

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -8,12 +8,12 @@
     padding:5px;
     padding-right:0;
     /*color: #99B198;*/
-    
-    
+    cursor: pointer;
 }
 
 .dijitAccordionInnerContainerSelected .dijitAccordionTitle {
     font-weight: bold;
+    cursor: pointer;
 }
 
 .dijitAccordionTitle .arrowTextUp, 
